--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="column sidebar">
         <h1 class="sidebar-name">Fraser Savage</h1>
 <p class="sidebar-blurb">
-Recent Computer Science Graduate, University College London.
+Recent Computer Science Graduate of University College London.
 Working on things at <a class="storageos" href="https://storageos.com">StorageOS</a>.
 </p>
 <nav class="nav-menu brace-effect">
