--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="sidebar-name">Fraser Savage</h1>
 <p class="sidebar-blurb">
 Recent Computer Science Graduate of University College London.
-Working on things at <a class="storageos" href="https://storageos.com">StorageOS</a>.
+Previously at <a class="storageos" href="https://storageos.com">StorageOS</a>.
 </p>
 <nav class="nav-menu brace-effect">
   <a class="nav-item icon github" href="https://github.com/savage-engineer"><i class="fa fa-github-alt"></i></a>
