Add a silly description and what I am currently up to

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <div class="column sidebar">
         <h1 class="sidebar-name">Fraser Savage</h1>
 <p class="sidebar-blurb">
-Recent Computer Science Graduate of University College London.
-Previously at <a class="storageos" href="https://storageos.com">StorageOS</a>.
+Software Engineer at <a class="improbable" href="https://improbable.io">Improbable</a>, previously <a class="storageos" href="https://ondat.io">Ondat</a>. 
+2019 MEng Computer Science Graduate from University College London. 
+Professional interests lie with Rust, Go, C++ & distributed systems programming. 
+Personally enjoy a good craft beer, the new wave of British jazz and probably some other things. 
 </p>
 <nav class="nav-menu brace-effect">
   <a class="nav-item icon github" href="https://github.com/savage-engineer"><i class="fa fa-github-alt"></i></a>
