chore(bio): Update bio

--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-<meta name="viewport" content="width=device-width">
-<meta name="theme-color" content="#EEECE3">
-<title>'allo, 'allo.</title>
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
-<link rel="stylesheet" href="/main.css" type="text/css" media="all"/>
 
-  </head>
-  <body data-route=blog>
-    <div class="row">
-      <div class="column sidebar">
-        <h1 class="sidebar-name">Fraser Savage</h1>
-<p class="sidebar-blurb">
-Software Engineer at <a class="improbable" href="https://improbable.io">Improbable</a>, previously <a class="storageos" href="https://ondat.io">Ondat</a>. 
-<br>
-2019 MEng Computer Science Graduate from University College London. 
-</p>
-<nav class="nav-menu brace-effect">
-  <a class="nav-item icon github" href="https://github.com/savage-engineer"><i class="fa fa-github-alt"></i></a>
-  <a class="nav-item icon linkedin" href="https://linkedin.com/in/frasersavage"><i class="fa fa-linkedin"></i></a>
-</nav>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <meta name="theme-color" content="#EEECE3">
+  <title>'allo, 'allo.</title>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="/main.css" type="text/css" media="all" />
+
+</head>
+
+<body data-route=blog>
+  <div class="row">
+    <div class="column sidebar">
+      <h1 class="sidebar-name">Fraser Savage</h1>
+      <p class="sidebar-blurb">
+        Senior Software Engineer at <a class="influxdata" href="https://influxdata.com">InfluxData</a>,
+        previously <a class="improbable" href="https://improbable.io">Improbable</a>, <a class="storageos"
+          href="https://ondat.io">Ondat</a>.
+        <br>
+        2019 MEng Computer Science Graduate from University College London.
+      </p>
+      <nav class="nav-menu brace-effect">
+        <a class="nav-item icon github" href="https://github.com/savage-engineer"><i class="fa fa-github-alt"></i></a>
+        <a class="nav-item icon linkedin" href="https://linkedin.com/in/frasersavage"><i class="fa fa-linkedin"></i></a>
+      </nav>
 
 
-      </div>
     </div>
+  </div>
 
-  </body>
+</body>
+
 </html>
