fix: broken link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p class="sidebar-blurb">
         Senior Software Engineer at <a class="influxdata" href="https://influxdata.com">InfluxData</a>,
         previously <a class="improbable" href="https://improbable.io">Improbable</a>, <a class="storageos"
-          href="https://ondat.io">Ondat</a>.
+          href="https://www.akamai.com/newsroom/press-release/akamai-announces-intention-to-acquire-cloud-company-ondat">Ondat</a>.
         <br>
         2019 MEng Computer Science Graduate from University College London.
       </p>
